fix: adjust font-size on mobile

--- a/src/components/general/Header/index.module.scss
+++ b/src/components/general/Header/index.module.scss
@@ -27,6 +27,11 @@
   }
 
   @media screen and (max-width: 767px) {
+    h1 {
+      font-size: 2.5rem;
+      margin-top: 2rem;
+    }
+
     nav {
       display: none;
     }
